рефакторинг дто
