# application/src/main/resources/openapi.yaml
@@ -39,10 +39,7 @@ paths:
           content: {}
         '500':
           description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+
   /application/offer:
     post:
       tags:
@@ -66,11 +63,6 @@ paths:
           content: {}
 components:
   schemas:
-    ErrorResponse:
-      type: object
-      properties:
-        error:
-          type: string
     LoanApplicationRequestDTO:
       required:
         - amount
@@ -133,148 +125,3 @@ components:
           type: boolean
         isSalaryClient:
           type: boolean
-    EmploymentDTO:
-      required:
-        - employerINN
-        - employmentStatus
-        - position
-        - salary
-        - workExperienceCurrent
-        - workExperienceTotal
-      type: object
-      properties:
-        employmentStatus:
-          type: string
-          enum:
-            - UNEMPLOYED
-            - SELF_EMPLOYED
-            - BUSINESS_OWNER
-            - EMPLOYEE
-        employerINN:
-          type: string
-        salary:
-          type: number
-        position:
-          type: string
-          enum:
-            - MIDDLE_MANAGER
-            - TOP_MANAGER
-            - MANAGER
-        workExperienceTotal:
-          type: integer
-          format: int32
-        workExperienceCurrent:
-          type: integer
-          format: int32
-    ScoringDataDTO:
-      required:
-        - account
-        - amount
-        - birthdate
-        - dependentAmount
-        - employment
-        - firstName
-        - gender
-        - isInsuranceEnabled
-        - isSalaryClient
-        - lastName
-        - maritalStatus
-        - passportIssueBranch
-        - passportIssueDate
-        - passportNumber
-        - passportSeries
-        - term
-      type: object
-      properties:
-        amount:
-          minimum: 10000
-          type: number
-        term:
-          minimum: 6
-          type: integer
-          format: int32
-        firstName:
-          pattern: ^[a-zA-Z]{2,30}$
-          type: string
-        lastName:
-          pattern: ^[a-zA-Z]{2,30}$
-          type: string
-        middleName:
-          pattern: ^[a-zA-Z]{2,30}$
-          type: string
-        gender:
-          type: string
-          enum:
-            - MALE
-            - FEMALE
-            - NON_BINARY
-        birthdate:
-          type: string
-          format: date
-        passportSeries:
-          pattern: ^[0-9]{4}$
-          type: string
-        passportNumber:
-          pattern: ^[0-9]{6}$
-          type: string
-        passportIssueDate:
-          type: string
-          format: date
-        passportIssueBranch:
-          type: string
-        maritalStatus:
-          type: string
-          enum:
-            - MARRIED
-            - DIVORCED
-            - NOT_MARRIED
-        dependentAmount:
-          type: integer
-          format: int32
-        employment:
-          $ref: '#/components/schemas/EmploymentDTO'
-        account:
-          type: string
-        isInsuranceEnabled:
-          type: boolean
-        isSalaryClient:
-          type: boolean
-    CreditDTO:
-      type: object
-      properties:
-        amount:
-          type: number
-        term:
-          type: integer
-          format: int32
-        monthlyPayment:
-          type: number
-        rate:
-          type: number
-        psk:
-          type: number
-        isInsuranceEnabled:
-          type: boolean
-        isSalaryClient:
-          type: boolean
-        paymentSchedule:
-          type: array
-          items:
-            $ref: '#/components/schemas/PaymentScheduleElementDTO'
-    PaymentScheduleElementDTO:
-      type: object
-      properties:
-        number:
-          type: integer
-          format: int32
-        date:
-          type: string
-          format: date
-        totalPayment:
-          type: number
-        interestPayment:
-          type: number
-        debtPayment:
-          type: number
-        remainingDebt:
-          type: number
